add link to github

--- a/config.toml
+++ b/config.toml
@@ -67,7 +67,7 @@ twitter = "mattous"
   [languages.en]
     languageName = "English"
     title = "mattous.tk"
-    subtitle = "Home of Matt Hardy  on the web"
+    subtitle = "Home of Matt Hardy on the web"
     owner = "Matt Hardy"
     keywords = "blog"
     copyright = "Matt Hardy"
@@ -90,3 +90,7 @@ twitter = "mattous"
         identifier = "twitter"
         name = "Twitter"
         url = "https://twitter.com/mattous"
+      [[languages.en.menu.main]]
+        identifier = "github"
+        name = "GitHub"
+        url = "https://github.com/mattous"
